@@ -19,17 +19,20 @@ import dev.langchain4j.data.document.Metadata;
 import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.data.segment.TextSegment;
 import dev.langchain4j.store.embedding.*;
+import dev.langchain4j.store.embedding.EmbeddingSearchRequest;
 import io.qdrant.client.QdrantClient;
 import io.qdrant.client.QdrantGrpcClient;
+import io.qdrant.client.QueryFactory;
 import io.qdrant.client.WithVectorsSelectorFactory;
 import io.qdrant.client.grpc.Common.Filter;
+import io.qdrant.client.grpc.Common.PointId;
 import io.qdrant.client.grpc.JsonWithInt.Value;
 import io.qdrant.client.grpc.Points;
 import io.qdrant.client.grpc.Points.DeletePoints;
 import io.qdrant.client.grpc.Points.PointStruct;
 import io.qdrant.client.grpc.Points.PointsSelector;
+import io.qdrant.client.grpc.Points.QueryPoints;
 import io.qdrant.client.grpc.Points.ScoredPoint;
-import io.qdrant.client.grpc.Points.SearchPoints;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -60,7 +63,7 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
      * @param port           The GRPC port of the Qdrant instance.
      * @param useTls         Whether to use TLS(HTTPS).
      * @param payloadTextKey The field name of the text segment in the Qdrant
-     *                       payload.
+     * payload.
      * @param apiKey         The Qdrant API key to authenticate with.
      */
     public QdrantEmbeddingStore(
@@ -86,7 +89,7 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
      * @param client         A Qdrant client instance.
      * @param collectionName The name of the Qdrant collection.
      * @param payloadTextKey The field name of the text segment in the Qdrant
-     *                       payload.
+     * payload.
      */
     public QdrantEmbeddingStore(QdrantClient client, String collectionName, String payloadTextKey) {
         this.client = client;
@@ -140,16 +143,18 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
             for (int i = 0; i < embeddings.size(); i++) {
 
                 String id = ids.get(i);
-                UUID uuid = UUID.fromString(id);
+                PointId qdrantId = toPointId(id);
                 Embedding embedding = embeddings.get(i);
 
                 PointStruct.Builder pointBuilder =
-                        PointStruct.newBuilder().setId(id(uuid)).setVectors(vectors(embedding.vector()));
+                        PointStruct.newBuilder().setId(qdrantId).setVectors(vectors(embedding.vector()));
 
                 if (textSegments != null) {
                     Map<String, Object> metadata =
                             textSegments.get(i).metadata().toMap();
 
+                    // Assuming ValueMapFactory is available in your actual codebase imports
+                    // If not, it might be an internal class you need to make sure is accessible
                     Map<String, Value> payload = ValueMapFactory.valueMap(metadata);
                     payload.put(payloadTextKey, value(textSegments.get(i).text()));
                     pointBuilder.putAllPayload(payload);
@@ -178,7 +183,7 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
         try {
 
             Points.PointsIdsList pointsIdsList = Points.PointsIdsList.newBuilder()
-                    .addAllIds(ids.stream().map(id -> id(UUID.fromString(id))).toList())
+                    .addAllIds(ids.stream().map(QdrantEmbeddingStore::toPointId).collect(toList()))
                     .build();
             PointsSelector pointsSelector =
                     PointsSelector.newBuilder().setPoints(pointsIdsList).build();
@@ -219,22 +224,22 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
     @Override
     public EmbeddingSearchResult<TextSegment> search(EmbeddingSearchRequest request) {
 
-        SearchPoints.Builder searchBuilder = SearchPoints.newBuilder()
+        QueryPoints.Builder queryBuilder = QueryPoints.newBuilder()
                 .setCollectionName(collectionName)
-                .addAllVector(request.queryEmbedding().vectorAsList())
+                .setQuery(QueryFactory.nearest(request.queryEmbedding().vectorAsList()))
                 .setWithVectors(WithVectorsSelectorFactory.enable(true))
                 .setWithPayload(enable(true))
                 .setLimit(request.maxResults());
 
         if (request.filter() != null) {
             Filter filter = QdrantFilterConverter.convertExpression(request.filter());
-            searchBuilder.setFilter(filter);
+            queryBuilder.setFilter(filter);
         }
 
         List<ScoredPoint> results;
 
         try {
-            results = client.searchAsync(searchBuilder.build()).get();
+            results = client.queryAsync(queryBuilder.build()).get();
         } catch (InterruptedException | ExecutionException e) {
             throw new RuntimeException(e);
         }
@@ -291,7 +296,7 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
 
         return new EmbeddingMatch<>(
                 RelevanceScore.fromCosineSimilarity(cosineSimilarity),
-                scoredPoint.getId().getUuid(),
+                pointIdToString(scoredPoint.getId()),
                 embedding,
                 textSegmentValue == null
                         ? null
@@ -352,8 +357,8 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
 
         /**
          * @param payloadTextKey The field name of the text segment in the payload.
-         *                       Defaults to
-         *                       "text_segment".
+         * Defaults to
+         * "text_segment".
          * @return
          */
         public Builder payloadTextKey(String payloadTextKey) {
@@ -385,5 +390,22 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
             }
             return new QdrantEmbeddingStore(collectionName, host, port, useTls, payloadTextKey, apiKey);
         }
+    }
+
+    private static PointId toPointId(String id) {
+        try {
+            long num = Long.parseUnsignedLong(id);
+            return id(num);
+        } catch (NumberFormatException e) {
+            return id(UUID.fromString(id));
+        }
+    }
+
+    private static String pointIdToString(PointId pointId) {
+        return switch (pointId.getPointIdOptionsCase()) {
+            case NUM -> Long.toUnsignedString(pointId.getNum());
+            case UUID -> pointId.getUuid();
+            default -> throw new IllegalStateException("Unknown point ID type: " + pointId.getPointIdOptionsCase());
+        };
     }
 }
